# TCP-Calculator

./: .gitignore  CMakeLists.txt  Calculator.cpp  Calculator.h  Generator.cpp  Generator.h  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  client.cpp  server.cpp
